--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,2 +1,5 @@
+Size.attendee.name=Name must be between {2} and {1} characters
+Email=Not a valid email address
+NotEmpty=Field cannot be left blank
 attendee.name=Introduzca Nombre
 attendee.email.address=Introduzca direccion de correo electronico
